ec2.yml
AWSTemplateFormatVersion: '2010-09-09'
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  RDSStackName:
    Description: 'RDS Stack Name'
    Type: AWS::CloudFormation::Stack
    Default: RDSInstance1
  Region:
    Type: String
    Description: AWS region for EC2 instance
    Default: us-east-1
    AllowedValues:
      - us-east-1
      - us-west-2
      - eu-west-1
  EnvironmentName:
    Description: SDLC Environment Value e.g dev/qa/prod.
    Type: String
  VpcId:
    Type: String
    Description: ID of your existing VPC
    Default: vpc-07f8a1950a8a15113
  SubnetId:
    Description: Select a subnet from the list
    Type: AWS::EC2::Subnet::Id
    Default: subnet-0ba3c1887c69bb803
    ConstraintDescription: Select a valid subnet from the list
Mappings:
  RegionAMI:
    us-east-1:
      AMI: ami-062f7200baf2fa504
    us-west-2:
      AMI: ami-03caa3f860895f82e
    eu-west-1:
      AMI: ami-0713f98de93617bb4
Resources:
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      SecurityGroupIds:
        - !Ref EC2SecurityGroup
      SubnetId: !Ref SubnetId
      KeyName: !Ref KeyName
      ImageId: !FindInMap [RegionAMI, !Ref Region, AMI]
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          # Install MySQL client
          sudo yum install -y mysql
          # Import the RDS endpoint from the exported output of the RDS stack
          RDSEndpoint=$(Fn::ImportValue RDSInstance-RDSEndpoint)" >> /etc/profile
          # Use the MySQL client to connect to the RDS database
          echo "alias rdsconnect='mysql -h $RDSEndpoint -u mohit -p mohit123 -P 3306'" >> ~/.bashrc
          source ~/.bashrc
          rdsconnect << EOF
          CREATE DATABASE IF NOT EXISTS my_sample_db;
          USE my_sample_db;
          CREATE TABLE IF NOT EXISTS users (
            id INT AUTO_INCREMENT PRIMARY KEY,
            name VARCHAR(50) NOT NULL,
            email VARCHAR(100) NOT NULL
          );
          INSERT INTO users (name, email) VALUES ('John Doe', 'john.doe@example.com');
          INSERT INTO users (name, email) VALUES ('Jane Smith', 'jane.smith@example.com');
          EOF
          #mysql -h $RDSEndpoint -u <RDS-Username> -p< > -e "SHOW DATABASES;"
  EC2SecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: !Join [ "-", [ !Ref EnvironmentName, 'ec2-security-group' ] ]
      GroupDescription: Enable SSH access via port 22
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
Outputs:
  PublicIPAddress:
    Value: !GetAtt EC2Instance.PublicIp
    Description: Public IP address of the EC2 instance
  PrivateIPAddress:
    Value: !GetAtt EC2Instance.PrivateIp
    Description: Private IP address of the EC2 instance
